games/valheim/2.0.24/CHANGELOG.md
# Changelog<br>


<a name="valheim-2.0.24"></a>
### [valheim-2.0.24](https://github.com/truecharts/apps/compare/valheim-2.0.23...valheim-2.0.24) (2022-02-21)

#### Fix

* Correctly map ports when changed in the UI ([#1921](https://github.com/truecharts/apps/issues/1921))



<a name="valheim-2.0.23"></a>
### [valheim-2.0.23](https://github.com/truecharts/apps/compare/valheim-2.0.22...valheim-2.0.23) (2022-02-21)

#### Chore

* update docker general non-major ([#1924](https://github.com/truecharts/apps/issues/1924))



<a name="valheim-2.0.22"></a>
### [valheim-2.0.22](https://github.com/truecharts/apps/compare/valheim-2.0.21...valheim-2.0.22) (2022-02-16)

#### Chore

* update helm chart common to v8.15.4 ([#1879](https://github.com/truecharts/apps/issues/1879))



<a name="valheim-2.0.21"></a>
### [valheim-2.0.21](https://github.com/truecharts/apps/compare/valheim-2.0.20...valheim-2.0.21) (2022-02-08)

#### Chore

* update helm chart common to v8.15.2 ([#1870](https://github.com/truecharts/apps/issues/1870))



<a name="valheim-2.0.20"></a>
### [valheim-2.0.20](https://github.com/truecharts/apps/compare/valheim-2.0.19...valheim-2.0.20) (2022-02-07)

#### Chore

* update helm chart common to v8.15.1 ([#1864](https://github.com/truecharts/apps/issues/1864))



<a name="valheim-2.0.19"></a>
### [valheim-2.0.19](https://github.com/truecharts/apps/compare/valheim-2.0.18...valheim-2.0.19) (2022-02-06)

#### Chore

* update helm chart common to v8.15.0 ([#1856](https://github.com/truecharts/apps/issues/1856))



<a name="valheim-2.0.18"></a>
### [valheim-2.0.18](https://github.com/truecharts/apps/compare/valheim-2.0.17...valheim-2.0.18) (2022-02-02)

#### Chore

* update helm general non-major helm releases ([#1828](https://github.com/truecharts/apps/issues/1828))



<a name="valheim-2.0.17"></a>
### [valheim-2.0.17](https://github.com/truecharts/apps/compare/valheim-2.0.16...valheim-2.0.17) (2022-01-31)

#### Chore

* update docker general non-major docker tags ([#1823](https://github.com/truecharts/apps/issues/1823))



<a name="valheim-2.0.16"></a>
### [valheim-2.0.16](https://github.com/truecharts/apps/compare/valheim-2.0.15...valheim-2.0.16) (2022-01-25)

#### Chore

* update helm general non-major helm releases ([#1791](https://github.com/truecharts/apps/issues/1791))



<a name="valheim-2.0.15"></a>
### [valheim-2.0.15](https://github.com/truecharts/apps/compare/valheim-2.0.14...valheim-2.0.15) (2022-01-22)

#### Chore

* update helm general non-major helm releases ([#1766](https://github.com/truecharts/apps/issues/1766))



<a name="valheim-2.0.14"></a>
### [valheim-2.0.14](https://github.com/truecharts/apps/compare/valheim-2.0.13...valheim-2.0.14) (2022-01-21)

#### Chore

* update helm general non-major helm releases ([#1759](https://github.com/truecharts/apps/issues/1759))
