games/valheim/2.0.29/CHANGELOG.md
# Changelog<br>


<a name="valheim-2.0.29"></a>
### [valheim-2.0.29](https://github.com/truecharts/apps/compare/valheim-2.0.28...valheim-2.0.29) (2022-03-03)

#### Chore

* remove fixed env from questions.yaml
* update helm chart common to v9 ([#2011](https://github.com/truecharts/apps/issues/2011))

#### Fix

* BREAKING CHANGE Move some env-vars outside of env section ([#2010](https://github.com/truecharts/apps/issues/2010))



<a name="valheim-2.0.27"></a>
### [valheim-2.0.27](https://github.com/truecharts/apps/compare/valheim-2.0.26...valheim-2.0.27) (2022-03-02)

#### Chore

* rename `web_portal` to `open` ([#1957](https://github.com/truecharts/apps/issues/1957))
* update helm chart common to v8.17.2 ([#1965](https://github.com/truecharts/apps/issues/1965))



<a name="valheim-2.0.26"></a>
### [valheim-2.0.26](https://github.com/truecharts/apps/compare/valheim-2.0.25...valheim-2.0.26) (2022-02-22)

#### Chore

* update helm chart common to v8.16.1 ([#1940](https://github.com/truecharts/apps/issues/1940))



<a name="valheim-2.0.25"></a>
### [valheim-2.0.25](https://github.com/truecharts/apps/compare/valheim-2.0.24...valheim-2.0.25) (2022-02-22)

#### Chore

* update helm chart common to v8.16.0 ([#1925](https://github.com/truecharts/apps/issues/1925))

#### Fix

* map ingress to correct service ([#1929](https://github.com/truecharts/apps/issues/1929))



<a name="valheim-2.0.24"></a>
### [valheim-2.0.24](https://github.com/truecharts/apps/compare/valheim-2.0.23...valheim-2.0.24) (2022-02-21)

#### Fix

* Correctly map ports when changed in the UI ([#1921](https://github.com/truecharts/apps/issues/1921))



<a name="valheim-2.0.23"></a>
### [valheim-2.0.23](https://github.com/truecharts/apps/compare/valheim-2.0.22...valheim-2.0.23) (2022-02-21)

#### Chore

* update docker general non-major ([#1924](https://github.com/truecharts/apps/issues/1924))



<a name="valheim-2.0.22"></a>
### [valheim-2.0.22](https://github.com/truecharts/apps/compare/valheim-2.0.21...valheim-2.0.22) (2022-02-16)

#### Chore

* update helm chart common to v8.15.4 ([#1879](https://github.com/truecharts/apps/issues/1879))



<a name="valheim-2.0.21"></a>
### [valheim-2.0.21](https://github.com/truecharts/apps/compare/valheim-2.0.20...valheim-2.0.21) (2022-02-08)

#### Chore

* update helm chart common to v8.15.2 ([#1870](https://github.com/truecharts/apps/issues/1870))



<a name="valheim-2.0.20"></a>
### [valheim-2.0.20](https://github.com/truecharts/apps/compare/valheim-2.0.19...valheim-2.0.20) (2022-02-07)

#### Chore

* update helm chart common to v8.15.1 ([#1864](https://github.com/truecharts/apps/issues/1864))



<a name="valheim-2.0.19"></a>
### [valheim-2.0.19](https://github.com/truecharts/apps/compare/valheim-2.0.18...valheim-2.0.19) (2022-02-06)

#### Chore

